# kiwisdr-conf

./: .gitattributes  .gitignore  README.md  WIFI.md  header.html  setup.sh  setup.sh.asc  sign.sh
.github/workflows/: backend.yml
backend/: Cargo.toml  backend-setup.sh  backend-setup.sh.asc  backend.service  backend.service.asc  build.sh
backend/src/: api.rs  error.rs  job.rs  lib.rs  main.rs  state.rs  tests.rs
backend/src/wifi/: connman.rs  mod.rs  model.rs
backend/src/wifi/connman/: agent.rs  client.rs  mod.rs  translation.rs
backend/src/wifi/model/: linux_ip_address.rs  mod.rs
backend/src/wifi/wpa_supplicant/: mod.rs
cert/: renew-cert.service.asc  renew-cert.sh  renew-cert.sh.asc  renew-cert.timer.asc
frontend/: build-typescript.sh  package-lock.json  package.json  tsconfig.json
frontend/html/: 502.html  502.html.asc  filebrowser.html  filebrowser.html.asc  filebrowser.js  filebrowser.js.asc  help.html  help.html.asc  recorder.html  recorder.html.asc  recorder.js  recorder.js.asc  stylesheet.css  stylesheet.css.asc
frontend/typescript_src/: filebrowser.ts  recorder.ts
kiwiclient/: kiwiclient-setup.sh  kiwiclient-setup.sh.asc
nginx/: nginx-setup.sh  nginx-setup.sh.asc  nginx.conf  nginx.conf.asc
