[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full", "rt", "macros"] }
chrono = "0.4"
rand = "0.8"
thiserror = "2.0.17"
zbus = { version = "5.13", default-features = false, features = ["tokio"] }
zvariant = "5.9"
